# bv

./: .env.example  README.md  pyproject.toml  requirements.txt
src/tradebot/: __init__.py  cli.py  config.py  ocr.py  simulator.py  utils.py
src/tradebot/exchanges/: base.py  kraken.py  uphold.py
